--- a/src/app/task-list/task-item/task-item.component.css
+++ b/src/app/task-list/task-item/task-item.component.css
@@ -1,64 +1,82 @@
 :host {
-  gap: 8px;
-  width: 95%;
-  height: 40px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-radius: 20px;
-  background-color: #3b3b3b;
+    gap: 8px;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    padding: 0 0 0 8px;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 3px;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
 :host > span:nth-child(1) {
-  width: 40px;
-  display: flex;
-  height: inherit;
-  border-radius: 20px;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(0deg,rgba(137, 34, 204, 50%), rgba(243, 7, 61, 50%));
-}
-
-span > input {
-  background-color: #5b5b5b
+    width: 40px;
+    display: flex;
+    height: inherit;
+    border-radius: 3px;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(
+        0deg,
+        rgba(137, 34, 204, 100%),
+        rgba(243, 7, 61, 100%)
+    );
 }
 
 span:nth-child(2) {
-  flex-grow: 1;
+    flex-grow: 1;
 }
 
 button {
-  gap: 8px;
-  width: 40px;
-  opacity: 60%;
-  border: none;
-  display: flex;
-  height: inherit;
-  color: #1b1b1b;
-  flex-direction: row;
-  align-items: center;
-  border-radius: inherit;
-  justify-content: center;
-  background-color: #5b5b5b;
-  transition: all ease-in .5s;
+    gap: 8px;
+    width: 40px;
+    opacity: 60%;
+    border: none;
+    display: flex;
+    height: inherit;
+    flex-direction: row;
+    align-items: center;
+    border-radius: inherit;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.25);
+    transition: all ease-in 0.5s;
+}
+
+input[type="text"] {
+    flex-grow: 1;
+    border: none;
+    height: 24px;
+    font-size: 16px;
+    margin-right: -8px;
+    padding-left: 4px;
+    border-radius: 3px;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+input:focus {
+    outline: none;
+}
+
+span > input {
+    margin: 10px;
 }
 
 button:hover {
-  opacity: 70%;
-  color: #FFFFFF;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 button:active {
-  opacity: 100%;
-  transition: none;
-  outline: solid 1px #FFFFFF;
+    opacity: 100%;
+    transition: none;
+    outline: solid 1px #ffffff;
 }
 
 button > span:not(.material-symbols-sharp) {
-  font-size: 12px;
-  font-weight: bold;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 button > span.material-symbols-sharp {
-  font-size: 16px;
+    font-size: 16px;
 }
